[tool.black]
line-length = 79

[tool.poetry]
name = "talismud"
version = "0.1.0"
description = "A MUD engine written in Python."
authors = ["Vincent Le Goff <vincent.legoff.srs@gmail.com>"]
license = "BSD-3-Clause"
keywords = ['MUD', 'game', 'text']
homepage = "https://talismud.planio.com/projects/talismud?jump=home"
documentation = "https://github.com/talismud/talismud"
readme = 'README.md'  # Markdown files are supported
include = [
    "LICENSE",
]

[tool.poetry.scripts]
talismud = 'talismud:run'

[tool.poetry.dependencies]
alembic = "^1.7"
async-timeout = "^4.0.1"
beautifultable = "^1.0.1"
cryptography = "^35.0.0"
dynaconf = "^3.1.7"
itsdangerous = "^2.0.1"
keyring = "^23.2.1"
parse = "^1.19"
psutil = "^5.9.4"
pydantic = {version = "^1.10.2", extras = ["email"]}
python = "^3.10"
pyyaml = "^6.0"
SQLAlchemy = "^1.4.22"

[tool.poetry.dev-dependencies]
behave = "^1.2.6"
black = "^22.3"
flake8 = "^4.0.1"
pyhamcrest = "^2.0.4"
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
